8209548: Unused and incorrect calls to FT_Get_Char_Index

Reviewed-by: psadhukhan, kaddepalli