src/java.desktop/share/native/libfontmanager/freetypeScaler.c
@@ -679,7 +679,6 @@ Java_sun_font_FreetypeFontScaler_getGlyphImageNative(
     int error, imageSize;
     UInt16 width, height;
     GlyphInfo *glyphInfo;
-    int glyph_index;
     int renderFlags = FT_LOAD_RENDER, target;
     FT_GlyphSlot ftglyph;
 
@@ -719,8 +718,6 @@ Java_sun_font_FreetypeFontScaler_getGlyphImageNative(
         target = FT_LOAD_TARGET_LCD_V;
     }
     renderFlags |= target;
-
-    glyph_index = FT_Get_Char_Index(scalerInfo->face, glyphCode);
 
     error = FT_Load_Glyph(scalerInfo->face, glyphCode, renderFlags);
     if (error) {
@@ -958,7 +955,6 @@ static FT_Outline* getFTOutline(JNIEnv* env, jobject font2D,
         FTScalerContext *context, FTScalerInfo* scalerInfo,
         jint glyphCode, jfloat xpos, jfloat ypos) {
     int renderFlags;
-    int glyph_index;
     FT_Error error;
     FT_GlyphSlot ftglyph;
 
@@ -973,8 +969,6 @@ static FT_Outline* getFTOutline(JNIEnv* env, jobject font2D,
     }
 
     renderFlags = FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP;
-
-    glyph_index = FT_Get_Char_Index(scalerInfo->face, glyphCode);
 
     error = FT_Load_Glyph(scalerInfo->face, glyphCode, renderFlags);
     if (error) {
